--- a/orion-casino-gui/src/components/Navbar/Navbar.css
+++ b/orion-casino-gui/src/components/Navbar/Navbar.css
@@ -1,3 +1,8 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 .navbar {
     background-color: #19002A;
 }
@@ -15,33 +20,55 @@
     display: flex;
     align-items: center;
     text-align: center;
+    margin-left: 2%;
 }
 
 .navbar-left-corner:hover{
     cursor: pointer;
 }
 
+.search-input{
+    color: white;
+    background-color: #3B0365FF;
+    border: none;
+    border-radius: 50px;
+    width: 300px;
+    height: 40px;
+}
+
 .navbar-center-right{
     display: inline-flex;
     justify-content: space-between;
     gap: 5px;
+    margin-left: 28%;
 }
 
-.login-button, .signup-button{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 15px;
-    color: white;
-    padding: 12px 30px;
-    border-radius: 30px;
-    cursor: pointer;
-}
-.login-button{
-    background-color: #19002A;
-    border: solid 1px #3B0365FF;
+.navbar-right-corner{
+    display: inline-flex;
+    justify-content: space-between;
+    gap: 5px;
+    align-items: center;
+    margin-right: 2%;
 }
 
-.signup-button{
+.profile-logo{
+}
+
+.settings-button, .profile-button{
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
     border: none;
-    background: linear-gradient(90deg, #ce63f3, #6D0DB6FF);
+    cursor: pointer;
+    background-color: #3B0365FF;
+}
+.settings-button img, .profile-logo img{
+    scale: 50%;
+}
+
+.settings-button:hover, .profile-button:hover{
+    scale: 1.05;
+    background-color: #49037EFF;
 }
