--- a/orion-casino-gui/src/components/Navbar/Navbar.css
+++ b/orion-casino-gui/src/components/Navbar/Navbar.css
@@ -5,6 +5,9 @@ html, body {
 
 .navbar {
     background-color: #19002A;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
 }
 
 .navbar-container{
@@ -34,6 +37,9 @@ html, body {
     border-radius: 50px;
     width: 300px;
     height: 40px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    text-indent: 10px;
 }
 
 .navbar-center-right{
@@ -46,7 +52,7 @@ html, body {
 .navbar-right-corner{
     display: inline-flex;
     justify-content: space-between;
-    gap: 5px;
+    gap: 10px;
     align-items: center;
     margin-right: 2%;
 }
