--- a/orion-casino-gui/src/components/Sidebar/Sidebar.css
+++ b/orion-casino-gui/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,5 @@
 .sidebar {
     display: flex;
-    flex-direction: row;
     background-color: #19002A;
     width: 400px;
     max-width: 18%;
@@ -9,7 +8,42 @@
     top: 80px;
 }
 
-.main-tiles{
-    display: block;
-    padding: 6px 8px 6px 16px;
+.main-tiles ol {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    margin-left: -20px;
+    margin-top: 25px;
+}
+
+.free-spin-button {
+    display: flex;
+    color: black;
+    background: linear-gradient(90deg, #bced4e, #81b040);
+    border: none;
+    border-radius: 50px;
+    width: 300px;
+    height: 80px;
+    cursor: pointer;
+    align-items: center;
+    margin-left: 20px;
+    justify-content: center;
+    margin-top: 25px;
+}
+.free-spin-button:hover{
+    scale: 1.05;
+}
+
+.free-spin-text{
+    margin-right: -10px;
+}
+
+.free-spin-icon{
+    margin-right: -10px;
+    scale: 0.5;
+}
+
+.support-button{
+    margin-left: 20px;
+    margin-top: 300px;
 }
