--- a/orion-casino-gui/src/components/Sidebar/Sidebar.css
+++ b/orion-casino-gui/src/components/Sidebar/Sidebar.css
@@ -5,7 +5,6 @@
     max-width: 18%;
     height: 100%;
     position: fixed;
-    top: 80px;
 }
 
 .main-tiles ol {
@@ -43,7 +42,12 @@
     scale: 0.5;
 }
 
-.support-button{
+.bottom-tiles {
     margin-left: 20px;
-    margin-top: 300px;
+    width: 300px;
+    height: 120px;
+    margin-top: 90%;
+}
+.deposit-button{
+    margin-top: 7px;
 }
