--- a/orion-casino-gui/src/components/MainContent/MainContent.css
+++ b/orion-casino-gui/src/components/MainContent/MainContent.css
@@ -1,11 +1,15 @@
-.main-container {
-    display: grid;
-    position: fixed;
-    justify-content: space-between;
-    width: 300px;
-    height: 300px;
+.main-content-panel {
+    display: flex;
+    position: absolute;
     background-color: #220d33;
-    box-sizing: border-box;
-    border-radius: 15px;
-    left: 360px;
+    width: 64%;
+    left: 19%;
+    top: 9%;
+    height: 100%;
+    border-radius: 50px;
+}
+
+.main-content-container {
+    width: 100%;
+    height: 100%;
 }
