--- a/orion-casino-gui/src/components/Sidebar/Sidebar.css
+++ b/orion-casino-gui/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,9 @@
 .sidebar {
-    width: 18%;
+    position: relative;
+    width: 16%;
     max-width: 18%;
     height: 90vh;
+    left: 1%;
 }
 
 .sidebar-container{
@@ -12,7 +14,6 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    padding-left: 5%;
 }
 
 .main-tiles {
