--- a/orion-casino-gui/src/components/Login/LoginPanel.css
+++ b/orion-casino-gui/src/components/Login/LoginPanel.css
@@ -35,6 +35,10 @@ body {
     justify-content: center;
     background-color: #262544;
     border-radius: 15px 0 0 15px;
+    Font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
 }
 
 .login-popup-right {
@@ -43,15 +47,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     background-color: #181637;
     border-radius: 0 15px 15px 0;
+    font-family: "Roboto", sans-serif;
+    color: white;
 }
 
 .login-popup h1 {
     top: 10%;
     position: relative;
-    font-size: 18px;
     margin-bottom: 10px;
     text-align: center;
     color: white;
@@ -65,57 +69,144 @@ body {
     text-align: center;
     color: white;
 }
-
-/*
-.form-group {
-    margin-bottom: 15px;
+.login-title {
+    top: 3%;
+    right: 16%;
+    position: relative;
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: 400;
 }
+
+.login-form {
+    top: 4%;
+    position: relative;
+    right: 3%;
+    width: 300px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
 
 .form-group label {
     display: block;
     margin-bottom: 5px;
+    font-size: 14px;
+    color: white;
 }
 
-input {
+.form-group input {
     width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-    border-radius: 5px;
+    padding: 12px;
     border: none;
+    border-radius: 5px;
+    background-color: #0b0d2c;
+    color: white;
     outline: none;
 }
 
-.btn-login {
-    background-color: #6D0DB6FF;
+
+.form-group input::placeholder {
+    color: rgb(158, 154, 154)
+}
+
+
+.login-options {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
+    width: 108%;
+    top: 6%;
+}
+
+.login-options label{
+    display: flex;
+    flex-direction: row-reverse;
     color: white;
-    width: 100%;
-    padding: 10px;
+}
+
+.login-options input[type="checkbox"] {
+    display: none;
+}
+
+.login-options label::before {
+    position: relative;
+    content: "";
+    width: 12px;
+    height: 12px;
+    border: 2px solid #BCED4EFF;
+    border-radius: 3px;
+    right: -5px;
+    transition: background-color 0.2s ease, border-color 0.2s ease;
+    display: inline-block;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.login-options input[type="checkbox"]:checked + label::before {
+    position: relative;
+    content: "✓";
+    color: #181637;
+    font-size: 12px;
+    text-align: center;
+    line-height: 15px;
+    background-color: #BCED4EFF;
+    border-color: #BCED4EFF;
+    cursor: pointer;
+}
+
+.forgot-password {
+    color: white;
+    text-decoration: none;
+}
+
+.forgot-password:hover {
+    color: #373661;
+}
+
+.btn-login {
+    position: relative;
+    width: 108%;
+    background: linear-gradient(90deg, #bced4e, #81b040);
+    color: #181637;
+    padding: 12px;
     border: none;
     border-radius: 5px;
+    font-size: 16px;
     cursor: pointer;
-    margin-top: 10px;
+    top: 12%;
+    font-weight: bold;
 }
 
-.btn-login:hover {
-    background-color: #8b20d6;
-}
-
-.register-link {
+.signup-link {
+    position: absolute;
     text-align: center;
-    margin-top: 10px;
+    font-size: 14px;
+    bottom: 4%;
 }
 
-.register-link a {
-    color: #ce63f3;
+.signup-link a {
+    color: #BCED4EFF;
+    text-decoration: none;
 }
 
-.btn-close {
+.close-button {
     position: absolute;
     top: 10px;
     right: 10px;
     background: transparent;
-    color: #fff;
-    font-size: 18px;
     border: none;
+    font-size: 30px;
+    color: white;
     cursor: pointer;
-}*/
+    z-index: 10;
+    transition: color 0.2s ease;
+}
+
+.close-button:hover {
+    color: #BCED4EFF;
+}
