--- a/orion-casino-gui/src/components/Navbar/Navbar.css
+++ b/orion-casino-gui/src/components/Navbar/Navbar.css
@@ -1,17 +1,17 @@
 .navbar {
     width: 100%;
-    z-index: 1000;
+    position: absolute;
 }
 
 .navbar-container {
     display: flex;
-    position: relative;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     height: 100%;
     padding: 5px 15px;
     box-sizing: border-box;
+    background-color: #19002A;
 }
 
 .navbar-left-corner {
