--- a/orion-casino-gui/src/components/Navbar/Navbar.css
+++ b/orion-casino-gui/src/components/Navbar/Navbar.css
@@ -20,6 +20,8 @@
     align-items: center;
     text-align: center;
     left: 10px;
+    font-family: 'Syncopate', sans-serif;
+    font-weight: 700;
 }
 
 .navbar-left-corner:hover {
