Login/Signup, deposit routing update

--- a/orion-casino-gui/src/components/Popups/DepositPanel/DepositPanel.css
+++ b/orion-casino-gui/src/components/Popups/DepositPanel/DepositPanel.css
@@ -276,11 +276,13 @@
     color: #0b0d2c;
 }
 
-.footer-payment-history {
+.footer-payment-history{
     display: flex;
     position: absolute;
     bottom: 10%;
     cursor: pointer;
+    text-decoration: none;
+    color: white;
 }
 
 .footer-payment-history:hover {
